packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_issue_33443.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2936
expression: output
---
==INPUT==


import { component$, useSignal } from '@khulnasoft.com/unisynth';

export const Issue3742 = component$(({description = '', other}: any) => {
    const counter = useSignal(0);
    return (
      <div
        title={(description && 'description' in other) ? `Hello ${counter.value}` : `Bye ${counter.value}`}
      >
        Issue3742
        <button onClick$={() => counter.value++}>
          Increment
        </button>
      </div>
    )
  });
  
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { _fnSignal } from "@khulnasoft.com/unisynth";
import { useLexicalScope } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { useSignal } from '@khulnasoft.com/unisynth';
const Issue3742_component_div_button_onClick_a504K2BCEXg = ()=>{
    const [counter] = useLexicalScope();
    return counter.value++;
};
const Issue3742_component_svSy0PlWTAw = (props)=>{
    const counter = useSignal(0);
    return /*#__PURE__*/ _jsxQ("div", null, {
        title: _fnSignal((p0, p1)=>(p1.description ?? '') && 'description' in p1.other ? `Hello ${p0.value}` : `Bye ${p0.value}`, [
            counter,
            props
        ], '(p1.description??"")&&"description"in p1.other?`Hello ${p0.value}`:`Bye ${p0.value}`')
    }, [
        "Issue3742",
        /*#__PURE__*/ _jsxQ("button", null, {
            onClick$: /*#__PURE__*/ inlinedQrl(Issue3742_component_div_button_onClick_a504K2BCEXg, "Issue3742_component_div_button_onClick_a504K2BCEXg", [
                counter
            ])
        }, "Increment", 3, null)
    ], 3, "u6_0");
};
export const Issue3742 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Issue3742_component_svSy0PlWTAw, "Issue3742_component_svSy0PlWTAw"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,SAAS,QAAQ,mBAAmB;2DAS/B;;WAAM,QAAQ,KAAK;;wCAPT;IAChC,MAAM,UAAU,UAAU;IAC1B,qBACE,MAAC;QACC,KAAK,sBAAE,AAAC,IAJsB,eAAc,OAIrB,oBAJyB,QAIC,CAAC,MAAM,EAAE,GAAQ,KAAK,CAAC,CAAC,GAAG,CAAC,IAAI,EAAE,GAAQ,KAAK,CAAC,CAAC;;;;;QACnG;sBAEC,MAAC;YAAO,QAAQ;;;WAAyB;;AAK/C;AAZF,OAAO,MAAM,0BAAY,2GAYpB\"}")
== DIAGNOSTICS ==

[]
